--- a/RoapTripPlannerApp/AppShell.xaml
+++ b/RoapTripPlannerApp/AppShell.xaml
@@ -11,7 +11,7 @@
     <ShellContent
         Title="Login"
         ContentTemplate="{DataTemplate local:LoginPage}"
-        Route="LogingPage" 
+        Route="Login" 
         FlyoutItemIsVisible="False"/>
     <TabBar FlyoutDisplayOptions="AsMultipleItems">
         <ShellContent 
@@ -30,21 +30,4 @@
             ContentTemplate="{DataTemplate local:ProfilePage}"
             Route="ProfilePage"/>
     </TabBar>
-
-    <!--<Shell.FlyoutHeader>
-        <Image Source="dotnet_bot"/>
-    </Shell.FlyoutHeader>
-
-    <FlyoutItem Title="Flyout" FlyoutDisplayOptions="AsMultipleItems">
-        <ShellContent Icon="home.png"
-            Title="Home"
-            ContentTemplate="{DataTemplate local:HomePage}"
-            Route="HomePage"/>
-        <ShellContent
-            Title="Login"
-            ContentTemplate="{DataTemplate local:LoginPage}"
-            Route="LogingPage"/>
-    </FlyoutItem>-->
-    
-
 </Shell>
