--- a/RoapTripPlannerApp/View/EditTripPage.xaml
+++ b/RoapTripPlannerApp/View/EditTripPage.xaml
@@ -1,12 +1,61 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodel="clr-namespace:RoapTripPlannerApp.ViewModel"
              x:Class="RoapTripPlannerApp.View.EditTripPage"
              Title="EditTripPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <Grid Padding="10"
+          Margin="10"
+          RowDefinitions="Auto,Auto,*">
+        <Frame Style="{StaticResource entryFrameStyle}" >
+            <Label Text="{Binding TripName}"
+                   FontSize="Medium"/>
+        </Frame>
+        <StackLayout Orientation="Horizontal"
+                     Grid.Row="1"
+                     Spacing="5">
+            <Frame Style="{StaticResource entryFrameStyle}" >
+                <StackLayout Orientation="Horizontal"
+                             Spacing="0"
+                             Padding="5">
+                    <Label Text="Start Date:"
+                           VerticalOptions="Center"
+                           FontAttributes="Bold"/>
+                    <DatePicker Date="{Binding StartDate}"
+                                VerticalOptions="Center"
+                                HorizontalOptions="FillAndExpand"
+                                FontSize="16"/>
+                </StackLayout>
+            </Frame>
+            <Frame Style="{StaticResource entryFrameStyle}" >
+                <StackLayout Orientation="Horizontal"
+                             Spacing="0"
+                             Padding="5">
+                    <Label Text="End Date:"
+                           VerticalOptions="Center"
+                           FontAttributes="Bold"/>
+                    <DatePicker Date="{Binding EndDate}"
+                                VerticalOptions="Center"
+                                HorizontalOptions="FillAndExpand"
+                                FontSize="16"/>
+                </StackLayout>
+            </Frame>
+        </StackLayout>
+        <CollectionView ItemsSource="{Binding Users}"
+                        SelectionMode="Single"
+                        Grid.Row="2">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <StackLayout Orientation="Horizontal"
+                                 Padding="10"
+                                 Margin="10">
+                        <Label Text="{Binding Username}"
+                               FontSize="Medium"/>
+                        <Label Text="{Binding Email}"
+                               FontSize="Medium"/>
+                    </StackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </Grid>
 </ContentPage>
