--- a/RoapTripPlannerApp/View/HomePage.xaml
+++ b/RoapTripPlannerApp/View/HomePage.xaml
@@ -5,9 +5,25 @@
              xmlns:viewmodel="clr-namespace:RoapTripPlannerApp.ViewModel"
              xmlns:maps="clr-namespace:Microsoft.Maui.Controls.Maps;assembly=Microsoft.Maui.Controls.Maps"
              xmlns:sensors="clr-namespace:Microsoft.Maui.Devices.Sensors;assembly=Microsoft.Maui.Essentials"
-             Title="Road Trip Planner">
+             Title="Road Trip Planner"
+             Shell.TitleColor="Transparent">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem 
+            Text="Profile"
+            IconImageSource="use.jpg"
+            Command="{Binding ProfileCommand}"/>
+        <ToolbarItem 
+            Text="My Trips" 
+            IconImageSource="trips.pjg"
+            Command="{Binding TripsCommand}"/>
+    </ContentPage.ToolbarItems>
     <Grid RowDefinitions="500, *">
         <!--<maps:Map IsShowingUser="True" IsTrafficEnabled="True" MapType="Street"></maps:Map>-->
+        <Button Grid.Row="0"
+        Text="My Trips"
+        FontSize="20"
+        HeightRequest="75"
+        Command="{Binding MyTripsCommand}"/>
         <Button Grid.Row="1"
                 Text="Create New Trip"
                 FontSize="20"
