--- a/RoapTripPlannerApp/View/RegisterPage.xaml
+++ b/RoapTripPlannerApp/View/RegisterPage.xaml
@@ -5,10 +5,11 @@
              xmlns:viewmodel="clr-namespace:RoapTripPlannerApp.ViewModel"
              Title="RegisterPage"
              Shell.NavBarIsVisible="False">
-    <Grid RowDefinitions="20, Auto, Auto, Auto"
-          RowSpacing="20">
-        <StackLayout Grid.Row="1"
-                     Orientation="Vertical" 
+    <Grid RowDefinitions="Auto, Auto, Auto"
+          RowSpacing="20"
+          Padding="5"
+          Margin="20,20,20,0">
+        <StackLayout Orientation="Vertical" 
                      VerticalOptions="CenterAndExpand">
             <Frame Style="{StaticResource entryFrameStyle}" >
                 <StackLayout Orientation="Horizontal">
@@ -43,14 +44,14 @@
             </Frame>
         </StackLayout>
         <Button Text="REGISTER"
-                Grid.Row="2" 
+                Grid.Row="1" 
                 Command="{Binding RegisterCommand}"/>
         <StackLayout Orientation="Horizontal" 
                      HorizontalOptions="CenterAndExpand"
                      Margin="0,20,0,0" 
                      Padding="0"
                      Spacing="10"
-                     Grid.Row="3">
+                     Grid.Row="2">
             <Label Text="Already have an account?" 
                    TextColor="DarkGray" 
                    FontSize="Small"/>
