--- a/RoadTripPlannerApp/View/EditTripPage.xaml
+++ b/RoadTripPlannerApp/View/EditTripPage.xaml
@@ -2,19 +2,37 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:RoadTripPlannerApp.ViewModel"
+             
              x:Class="RoadTripPlannerApp.View.EditTripPage"
              Title="EditTripPage"
              Shell.NavBarIsVisible="False"
              Shell.TabBarIsVisible="False">
     <Grid Padding="10"
-          Margin="10"
-          RowDefinitions="Auto,Auto,*, *">
-        <Frame>
-            <Label Text="{Binding Trip.Name}"
-                   FontSize="Medium"/>
+          Margin="20"
+          RowDefinitions="Auto,Auto,Auto,*,Auto">
+        <StackLayout Orientation="Vertical"
+                     HorizontalOptions="Start">
+            <ImageButton Source="home.png"
+                         HorizontalOptions="Center"
+                         HeightRequest="30"
+                         WidthRequest="30"
+                         BackgroundColor="White"
+                         CornerRadius="5"
+                         Command="{Binding HomeCommand}"/>
+            <Label Text="Home"
+                   FontSize="Micro"
+                   FontAttributes="Bold"
+                   HorizontalOptions="Center"/>
+        </StackLayout>
+        <Frame Grid.Row="1">
+            <StackLayout>
+                <Entry Text="{Binding Trip.TripName}"  
+                       Placeholder="Trip Name"
+                       FontSize="Medium"/>
+            </StackLayout>
         </Frame>
         <StackLayout Orientation="Horizontal"
-                     Grid.Row="1"
+                     Grid.Row="2"
                      Spacing="5">
             <Frame>
                 <StackLayout Orientation="Horizontal"
@@ -43,7 +61,7 @@
                 </StackLayout>
             </Frame>
         </StackLayout>
-        <CollectionView ItemsSource="{Binding Stops}"
+        <CollectionView BindingContext="{Binding Days}"
                         SelectionMode="Single"
                         Grid.Row="2">
             <CollectionView.ItemTemplate>
@@ -51,14 +69,28 @@
                     <StackLayout Orientation="Horizontal"
                                  Padding="10"
                                  Margin="10">
-                        <Label Text="{Binding Name}"
-                               FontSize="Medium"/>
+                        <Label Text="{Binding Date, StringFormat='{0:MM/dd/yyyy}'}"
+                               FontSize="Medium"
+                               TextColor="Black"
+                               BackgroundColor="Aqua"/>
+                        <CollectionView ItemsSource="{Binding Stops}">
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackLayout Orientation="Horizontal"
+                                                 Padding="10"
+                                                 Margin="10">
+                                        <Entry Text="{Binding StopName}"
+                                               FontSize="Medium"/>
+                                    </StackLayout>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-        <Button Text="Home"
+        <Button Text="Save"
                 Command="{Binding SaveTripCommand}"
-                Grid.Row="3 "/>
+                Grid.Row="4"/>
     </Grid>
 </ContentPage>
