--- a/RoadTripPlannerApp/View/LoginPage.xaml
+++ b/RoadTripPlannerApp/View/LoginPage.xaml
@@ -3,9 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="RoadTripPlannerApp.View.LoginPage"
-             x:Name="Page"
              xmlns:viewmodel="clr-namespace:RoadTripPlannerApp.ViewModel"
-             Title="LoginPage"
+             x:DataType="viewmodel:LoginViewModel"
              Shell.NavBarIsVisible="False"
              Shell.TabBarIsVisible="False">
     <!--<ContentPage.Behaviors>
