--- a/RoadTripPlannerApp/View/MyTripsPage.xaml
+++ b/RoadTripPlannerApp/View/MyTripsPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RoadTripPlannerApp.View.MyTripsPage"
              xmlns:viewmodel="clr-namespace:RoadTripPlannerApp.ViewModel"
+             
              Title="MyTripsPage"
              Shell.NavBarIsVisible="False">
     <Grid Padding="10"
@@ -43,13 +44,13 @@
                             <StackLayout Orientation="Vertical"
                                          HorizontalOptions="CenterAndExpand"
                                          VerticalOptions="CenterAndExpand">
-                                <Label Text="{Binding Name}"
+                                <Label Text="{Binding TripName}"
                                        FontSize="Medium"
                                        FontAttributes="Bold"
                                        VerticalOptions="CenterAndExpand"/>
-                                <Label Text="{Binding StartDate, StringFormat='From: {0}'}"
+                                <Label Text="{Binding StartDate, StringFormat='From: {0:MM/dd/yyyy}'}"
                                        FontSize="Small"/>
-                                <Label Text="{Binding EndDate, StringFormat='To: {0}'}"
+                                <Label Text="{Binding EndDate, StringFormat='To: {0:MM/dd/yyyy}'}"
                                        FontSize="Small"/>
                             </StackLayout>
                             <StackLayout Orientation="Vertical"
