--- a/RoadTripPlannerApp/View/NewTripPage.xaml
+++ b/RoadTripPlannerApp/View/NewTripPage.xaml
@@ -3,26 +3,41 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RoadTripPlannerApp.View.NewTripPage"
              xmlns:viewmodel="clr-namespace:RoadTripPlannerApp.ViewModel"
+             x:DataType="viewmodel:NewTripViewModel"
              Title="Create Trip"
-             Shell.TabBarIsVisible="False">
-    <Grid RowDefinitions="Auto, Auto, Auto, *"
+             Shell.TabBarIsVisible="False"
+             Shell.NavBarIsVisible="False">
+    <Grid RowDefinitions="Auto,Auto,Auto,Auto,*"
           Padding="5"
-          Margin="20,0,20,0"
+          Margin="20,10,20,0"
           RowSpacing="50">
-        <Frame>
+        <StackLayout Orientation="Vertical"
+                     HorizontalOptions="Start">
+            <ImageButton Source="home.png"
+                         HorizontalOptions="Center"
+                         HeightRequest="30"
+                         WidthRequest="30"
+                         BackgroundColor="White"
+                         CornerRadius="5"
+                         Command="{Binding HomeCommand}"/>
+            <Label Text="Home"
+                   FontSize="Micro"
+                   FontAttributes="Bold"
+                   HorizontalOptions="Center"/>
+        </StackLayout>
+        <Frame Grid.Row="1">
             <StackLayout>
                 <Entry Text="{Binding TripName}"  
                        Placeholder="Trip Name"
                        FontSize="Medium"/>
             </StackLayout>
         </Frame>
-        <Frame Grid.Row="1">
+        <Frame Grid.Row="2">
             <StackLayout Orientation="Horizontal">
                 <Frame Style="{StaticResource iconFrameStyle}">
                     <Grid>
                         <ImageButton Source="map.png"
-                                     Margin="5"
-                                     Command="{Binding MapCommand}"/>
+                                     Margin="5"/>
                     </Grid>
                 </Frame>
                 <SearchBar Text="{Binding FirstStop}"
@@ -30,7 +45,7 @@
             </StackLayout>
         </Frame>
         <StackLayout Orientation="Horizontal"
-                     Grid.Row="2"
+                     Grid.Row="3"
                      Spacing="20"
                      HorizontalOptions="Center">
             <Frame>
@@ -63,7 +78,7 @@
             </Frame>
         </StackLayout>
         <Button Text="Create Trip"
-                Grid.Row="3"
+                Grid.Row="4"
                 VerticalOptions="Center"
                 WidthRequest="175"
                 FontSize="Medium"
