--- a/RoadTripPlannerApp/View/ProfilePage.xaml
+++ b/RoadTripPlannerApp/View/ProfilePage.xaml
@@ -3,12 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RoadTripPlannerApp.View.ProfilePage"
              xmlns:viewmodel="clr-namespace:RoadTripPlannerApp.ViewModel"
-             Title="Profile">
-    <Grid RowDefinitions="*, 200"
+             x:DataType="viewmodel:ProfileViewModel"
+             Title="Profile"
+             Shell.NavBarIsVisible="False">
+    <Grid RowDefinitions="Auto,*,200"
           Padding="5"
-          Margin="20,0,20,0">
+          Margin="20,10,20,0">
         <StackLayout Orientation="Vertical"
-                     Grid.Column="1">
+                     HorizontalOptions="Start">
+            <ImageButton Source="home.png"
+                         HorizontalOptions="Center"
+                         HeightRequest="30"
+                         WidthRequest="30"
+                         BackgroundColor="White"
+                         CornerRadius="5"
+                         Command="{Binding HomeCommand}"/>
+            <Label Text="Home"
+                   FontSize="Micro"
+                   FontAttributes="Bold"
+                   HorizontalOptions="Center"/>
+        </StackLayout>
+        <StackLayout Orientation="Vertical"
+                     Grid.Row="1">
             <Frame>
                 <StackLayout Orientation="Horizontal">
                     <Frame Style="{StaticResource iconFrameStyle}">
@@ -49,8 +65,7 @@
                     FontSize="15"
                     Command="{Binding UpdateDetailsCommand}"/>
         </StackLayout>
-        <Button Grid.Row="1"
-                Grid.Column="1"
+        <Button Grid.Row="2"
                 Text="Log Out"
                 BackgroundColor="Coral"
                 TextColor="Black"
